src/test/ui/compile-fail-migration/pattern-bindings-after-at.stderr
error[E0303]: pattern bindings are not allowed after an `@`
  --> $DIR/pattern-bindings-after-at.rs:18:31
   |
LL |         ref mut z @ &mut Some(ref a) => {
   |                               ^^^^^ not allowed after `@`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0303`.
